# ele4205_projet

./: .gitignore  README.md  cmakeBuzzer.sh  cmakeClient.sh  cmakeServer.sh
buzzer/: CMakeLists.txt
buzzer/include/: Buzzer.h  BuzzerServer.h
buzzer/src/: Buzzer.cpp  BuzzerServer.cpp  main.cpp
client/: CMakeLists.txt
client/include/: CodeReader.h  TCPClient.h
client/src/: CodeReader.cpp  TCPClient.cpp  main.cpp
common/: Doxyfile
server/: CMakeLists.txt
server/include/: CameraManager.h  CameraSpecs.h  IOManager.h  TCPServer.h
server/src/: CameraManager.cpp  IOManager.cpp  TCPServer.cpp  main.cpp
